--- a/templates/susyScaleConstraint.cpp.in
+++ b/templates/susyScaleConstraint.cpp.in
@@ -13,7 +13,8 @@
 #define BETA(p) beta_##p
 
 @ModelName@_susy_scale_constraint::@ModelName@_susy_scale_constraint(const @ModelName@_input_parameters& inputPars_)
-   : model(0)
+   : Constraint<Two_scale>()
+   , model(0)
    , inputPars(inputPars_)
 {
 @scaleGuess@
@@ -40,9 +41,9 @@ double @ModelName@_susy_scale_constraint::get_scale() const
    return scale;
 }
 
-void @ModelName@_susy_scale_constraint::set_model(@ModelName@* model_)
+void @ModelName@_susy_scale_constraint::set_model(Two_scale_model* model_)
 {
-   model = model_;
+   model = cast_model<@ModelName@>(model_);
 }
 
 void @ModelName@_susy_scale_constraint::update_scale()
