--- a/templates/model.hpp.in
+++ b/templates/model.hpp.in
@@ -21,13 +21,14 @@
 
 #include "@ModelName@_softPars.hpp"
 #include "@ModelName@_physical.hpp"
+#include "two_scale_model.hpp"
 
 #include <iosfwd>
 
 #include <gsl/gsl_vector.h>
 #include <gsl/gsl_multiroots.h>
 
-class @ModelName@ : public @ModelName@_soft_parameters {
+class @ModelName@ : public Two_scale_model, public @ModelName@_soft_parameters {
 public:
    @ModelName@();
    virtual ~@ModelName@();
@@ -40,12 +41,17 @@ public:
    unsigned get_ewsb_loop_order() const;
    double get_ewsb_iteration_precision() const;
    const @ModelName@_physical& get_physical() const;
-   double getScale() const { return displayMu(); }
    int solve_ewsb();
    int solve_ewsb_with(const gsl_multiroot_fsolver_type*, const double*);
    void ewsb_initial_guess(double*);
-   virtual void print(std::ostream&) const;
    void print_state(std::size_t, gsl_multiroot_fsolver*) const;
+
+   // interface functions
+   virtual void calculate_spectrum();
+   virtual std::string name() const;
+   virtual int run_to(double scale, double eps = -1.0);
+   virtual void print(std::ostream&) const;
+   double getScale() const;
 
 @massGetters@
 @mixingMatrixGetters@
