--- a/config/flexiblesusy-config.in
+++ b/config/flexiblesusy-config.in
@@ -24,6 +24,22 @@ if test $# -eq 0; then
     exit 1
 fi
 
+help() {
+    echo "Usage: `basename $0` [options]"
+    echo "  --all-models          Print all models that are build"
+    echo "  --cxx                 Print C++ compiler"
+    echo "  --cxxflags            Print CXXFLAGS"
+    echo "  --cppflags            Print CPPFLAGS"
+    echo "  --fc                  Print Fortran compiler"
+    echo "  --fflags              Print FFLAGS"
+    echo "  --flibs               Print FLIBS"
+    echo "  --make-lib-cmd        Print make library command"
+    echo "  --math-cmd            Print Mathematica kernel command"
+    echo "  --with-<model>        Test if <model> is compiled in"
+    echo "  --version             Print the $packagename version"
+    echo "  --help                Print this message"
+}
+
 out=""
 
 while test $# -gt 0; do
@@ -59,19 +75,7 @@ while test $# -gt 0; do
         --version)       out="$version"       ;;
         --help)
       ### Print a help message
-            echo "Usage: `basename $0` [options]"
-            echo "  --all-models          Print all models that are build"
-            echo "  --cxx                 Print C++ compiler"
-            echo "  --cxxflags            Print CXXFLAGS"
-            echo "  --cppflags            Print CPPFLAGS"
-            echo "  --fc                  Print Fortran compiler"
-            echo "  --fflags              Print FFLAGS"
-            echo "  --flibs               Print FLIBS"
-            echo "  --make-lib-cmd        Print make library command"
-            echo "  --math-cmd            Print Mathematica kernel command"
-            echo "  --with-<model>        Test if <model> is compiled in"
-            echo "  --version             Print the $packagename version"
-            echo "  --help                Print this message"
+            help
             exit 0
             ;;
         *)
