--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -1,4 +1,5 @@
-MODULES    := config src meta templates @MODELS@ test examples doc
+MODELS     := @MODELS@
+MODULES    := config src meta templates $(MODELS) test examples doc
 CPPFLAGS   := @CPPFLAGS@ $(patsubst %,-I%,$(MODULES)) -I.
 CXXFLAGS   := @CXXFLAGS@
 FFLAGS     := @FFLAGS@
@@ -101,7 +102,7 @@ showbuild:
 	@echo "LAPACKLIBS = $(LAPACKLIBS)"
 	@echo "ALGORITHMS = $(ALGORITHMS)"
 	@echo "MATH       = $(MATH)"
-	@echo "MODELS     = @MODELS@"
+	@echo "MODELS     = $(MODELS)"
 	@echo ""
 	@echo "The list of modules to be built:"
 	@echo "--------------------------------"
