Set the low-energy DRbar yukawa couplings using the 1-loop DRbar fermion masses

--- a/templates/lowScaleConstraint.hpp.in
+++ b/templates/lowScaleConstraint.hpp.in
@@ -21,6 +21,7 @@ private:
    @ModelName@_input_parameters inputPars;
 
    void calculate_DRbar_gauge_couplings();
+   void calculate_DRbar_yukawa_couplings();
    void update_scale();
 };
 
