--- a/templates/lowScaleConstraint.cpp.in
+++ b/templates/lowScaleConstraint.cpp.in
@@ -35,6 +35,7 @@ void @ModelName@_low_scale_constraint::apply()
    model->calculate_DRbar_parameters();
    update_scale();
    calculate_DRbar_gauge_couplings();
+   calculate_DRbar_yukawa_couplings();
 
    const double MZDRbar
       = model->calculate_@VectorZ@_DRbar_1loop(Electroweak_constants::MZ);
@@ -64,5 +65,21 @@ void @ModelName@_low_scale_constraint::calculate_DRbar_gauge_couplings()
    const double currentScale = model->displayMu();
    static const double oneOver16PiSqr = 1./(16. * M_PI * M_PI);
 
-@setDRbarCouplings@
+@setDRbarGaugeCouplings@
+}
+
+void @ModelName@_low_scale_constraint::calculate_DRbar_yukawa_couplings()
+{
+   DoubleMatrix topDRbar(3,3), bottomDRbar(3,3),  electronDRbar(3,3);
+   topDRbar(1,1)      = model->calculate_@TopQuark@_DRbar_1loop(Electroweak_constants::MUP, 1);
+   topDRbar(2,2)      = model->calculate_@TopQuark@_DRbar_1loop(Electroweak_constants::MCHARM, 2);
+   topDRbar(3,3)      = model->calculate_@TopQuark@_DRbar_1loop(Electroweak_constants::PMTOP, 3);
+   bottomDRbar(1,1)   = model->calculate_@BottomQuark@_DRbar_1loop(Electroweak_constants::MDOWN, 1);
+   bottomDRbar(2,2)   = model->calculate_@BottomQuark@_DRbar_1loop(Electroweak_constants::MSTRANGE, 2);
+   bottomDRbar(3,3)   = model->calculate_@BottomQuark@_DRbar_1loop(Electroweak_constants::PMBOTTOM, 3);
+   electronDRbar(1,1) = model->calculate_@Electron@_DRbar_1loop(Electroweak_constants::MELECTRON, 1);
+   electronDRbar(2,2) = model->calculate_@Electron@_DRbar_1loop(Electroweak_constants::MMUON, 2);
+   electronDRbar(3,3) = model->calculate_@Electron@_DRbar_1loop(Electroweak_constants::MTAU, 3);
+
+@setDRbarYukawaCouplings@
 }
