--- a/templates/initialGuesser.cpp.in
+++ b/templates/initialGuesser.cpp.in
@@ -42,6 +42,8 @@ void @ModelName@_initial_guesser::guess_susy_parameters()
    QedQcd leAtMt;
    const double sinth2 = Electroweak_constants::sinthWsq;
    const double mtpole = Electroweak_constants::PMTOP;
+   const double MZDRbar = Electroweak_constants::MZ;
+   const double MWDRbar = Electroweak_constants::MW;
 
    // guess gauge couplings at mt
    const DoubleVector a(leAtMt.getGaugeMu(mtpole, sinth2));
@@ -51,6 +53,8 @@ void @ModelName@_initial_guesser::guess_susy_parameters()
    model->set_@strongCoupling@(sqrt(4.0 * M_PI * a(3)));
    model->setMu(mtpole);
    model->setLoops(2);
+
+@applyConstraint@
 
    DoubleMatrix topDRbar(3,3), bottomDRbar(3,3),  electronDRbar(3,3);
    topDRbar(1,1)      = Electroweak_constants::MUP;
