--- a/templates/MSSM/FlexibleSUSY.m.in
+++ b/templates/MSSM/FlexibleSUSY.m.in
@@ -41,3 +41,8 @@ BoundaryLowScaleInput={
    {vd, 2 MZDRbar / Sqrt[(g1^2+g2^2)] Cos[ArcTan[TanBeta]]},
    {vu, 2 MZDRbar / Sqrt[(g1^2+g2^2)] Sin[ArcTan[TanBeta]]}
 };
+
+InitialGuess = {
+    {\[Mu]   , MZDRbar},
+    {B[\[Mu]], MZDRbar^2}
+};
