--- a/templates/NMSSM/FlexibleSUSY.m.in
+++ b/templates/NMSSM/FlexibleSUSY.m.in
@@ -49,3 +49,5 @@ BoundaryLowScaleInput={
    {vd, 2 MZDRbar / Sqrt[(g1^2+g2^2)] Cos[ArcTan[TanBeta]]},
    {vu, 2 MZDRbar / Sqrt[(g1^2+g2^2)] Sin[ArcTan[TanBeta]]}
 };
+
+InitialGuess = {};
