--- a/templates/inputPars.hpp.in
+++ b/templates/inputPars.hpp.in
@@ -4,6 +4,9 @@
 
 struct @ModelName@_input_parameters {
 @defineInputParameters@
+   @ModelName@_input_parameters()
+      @defaultInputParametersInit@
+   {}
 };
 
 #endif
