--- a/templates/susyScaleConstraint.cpp.in
+++ b/templates/susyScaleConstraint.cpp.in
@@ -29,9 +29,9 @@ void @ModelName@_susy_scale_constraint::apply()
    assert(model && "Error: @ModelName@_susy_scale_constraint:"
           " model pointer must not be zero");
 
+   model->solve_ewsb(0);
    model->calculate_DRbar_parameters();
    update_scale();
-   model->solve_ewsb();
 
 @applyConstraint@
 }
