--- a/templates/NMSSM/FlexibleSUSY.m.in
+++ b/templates/NMSSM/FlexibleSUSY.m.in
@@ -60,4 +60,9 @@ BoundaryLowScaleInput={
    {vu, 2 MZDRbar / Sqrt[(g1^2+g2^2)] Sin[ArcTan[TanBeta]]}
 };
 
-InitialGuess = {};
+InitialGuess = {
+   {vS, vSInput},
+   {mHd2, MZDRbar},
+   {mHu2, MZDRbar},
+   {ms2, MZDRbar}
+};
