--- a/templates/E6SSM/FlexibleSUSY.m.in
+++ b/templates/E6SSM/FlexibleSUSY.m.in
@@ -74,4 +74,11 @@ BoundaryLowScaleInput={
    {vu, 2 MZDRbar / Sqrt[(g1^2+g2^2)] Sin[ArcTan[TanBeta]]}
 };
 
-InitialGuess = {};
+InitialGuess = {
+   {vS, vSInput},
+   {mHd2, MZDRbar},
+   {mHu2, MZDRbar},
+   {ms2, MZDRbar},
+   {BmuPrime, MZDRbar^2},
+   {muPrime, MZDRbar}
+};
