Avoid automatic setting of the low-energy BCs in the initial guesser, because the user might want to do something smarter.

--- a/templates/E6SSM/FlexibleSUSY.m.in
+++ b/templates/E6SSM/FlexibleSUSY.m.in
@@ -75,6 +75,7 @@ BoundaryLowScaleInput={
 };
 
 InitialGuess = {
+   Sequence @@ BoundaryLowScaleInput,
    {vS, vSInput},
    {mHd2, MZDRbar},
    {mHu2, MZDRbar},
