--- a/templates/FlexibleSUSY.m.in
+++ b/templates/FlexibleSUSY.m.in
@@ -50,6 +50,7 @@ BoundaryLowScaleInput={
 };
 
 InitialGuess = {
-    {\[Mu]   , MZDRbar},
-    {B[\[Mu]], MZDRbar^2}
+   Sequence @@ BoundaryLowScaleInput,
+   {\[Mu]   , MZDRbar},
+   {B[\[Mu]], MZDRbar^2}
 };
