--- a/templates/NMSSM/FlexibleSUSY.m.in
+++ b/templates/NMSSM/FlexibleSUSY.m.in
@@ -61,6 +61,7 @@ BoundaryLowScaleInput={
 };
 
 InitialGuess = {
+   Sequence @@ BoundaryLowScaleInput,
    {vS, vSInput},
    {mHd2, MZDRbar},
    {mHu2, MZDRbar},
