--- a/templates/model.hpp.in
+++ b/templates/model.hpp.in
@@ -35,9 +35,11 @@ public:
 
    void calculate_DRbar_parameters();
    void calculate_1loop_masses();
-   void set_number_of_ewsb_iterations(std::size_t);
    void set_ewsb_loop_order(unsigned);
    void set_ewsb_iteration_precision(double);
+   void set_mass_iteration_precision(double);
+   void set_number_of_ewsb_iterations(std::size_t);
+   void set_number_of_mass_iterations(std::size_t);
    unsigned get_ewsb_loop_order() const;
    double get_ewsb_iteration_precision() const;
    const @ModelName@_physical& get_physical() const;
