Search for Eigen.

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -8,6 +8,7 @@ BOOSTTESTLIBS  := @BOOSTTESTLIBS@
 BOOSTTHREADLIBS  := @BOOSTTHREADLIBS@
 BOOSTFLAGS := @BOOSTFLAGS@
 CXX        := @CXX@
+EIGENFLAGS := @EIGENFLAGS@
 FC         := @FC@
 GSLLIBS    := @GSLLIBS@
 GSLFLAGS   := @GSLFLAGS@
@@ -95,6 +96,7 @@ showbuild:
 	@echo "BOOSTTESTLIBS  = $(BOOSTTESTLIBS)"
 	@echo "BOOSTTHREADLIBS  = $(BOOSTTHREADLIBS)"
 	@echo "BOOSTFLAGS = $(BOOSTFLAGS)"
+	@echo "EIGENFLAGS = $(EIGENFLAGS)"
 	@echo "GSLLIBS    = $(GSLLIBS)"
 	@echo "GSLFLAGS   = $(GSLFLAGS)"
 	@echo "TVMETLIBS  = $(TVMETLIBS)"
