--- a/templates/initialGuesser.cpp.in
+++ b/templates/initialGuesser.cpp.in
@@ -57,7 +57,9 @@ void @ModelName@_initial_guesser::guess_susy_parameters()
 
 @applyConstraint@
 
-   Eigen::Matrix<double,3,3> topDRbar, bottomDRbar,  electronDRbar;
+   Eigen::Matrix<double,3,3> topDRbar(Eigen::Matrix<double,3,3>::Zero()),
+      bottomDRbar(Eigen::Matrix<double,3,3>::Zero()),
+      electronDRbar(Eigen::Matrix<double,3,3>::Zero());
    topDRbar(0,0)      = Electroweak_constants::MUP;
    topDRbar(1,1)      = Electroweak_constants::MCHARM;
    topDRbar(2,2)      = Electroweak_constants::MTOP;
