--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -86,7 +86,7 @@ $(DIR)/@MODEL@_convergenceTester.cpp: $(DIR)/@MODEL@_susyPars.hpp
 $(DIR)/@MODEL@_initialGuesser.cpp: $(DIR)/@MODEL@_susyPars.hpp
 	true
 
-$(LATTICE_EXAMPLES_DEP) $(LIB@MODEL@_OBJ) $(DIR)/run_@MODEL@.o: CPPFLAGS += $(EIGENFLAGS)
+$(LIB@MODEL@_DEP) $(LIB@MODEL@_OBJ) $(DIR)/run_@MODEL@.o: CPPFLAGS += $(EIGENFLAGS)
 
 $(LIB@MODEL@): $(LIB@MODEL@_OBJ)
 		$(MAKELIB) $@ $^
