Start iteration with the fastest method (hybrid).  If this fails, we use dynamic scaling (hybrids). Do not use Newton because it is slow but not more precise than hybrid. Broyden seems to be very unstable for the EWSB, so we leave it out.

--- a/templates/model.cpp.in
+++ b/templates/model.cpp.in
@@ -112,8 +112,7 @@ int tadpole_equations(const gsl_vector* x, void* params, gsl_vector* f)
 int @ModelName@::solve_ewsb()
 {
    const gsl_multiroot_fsolver_type* solvers[] =
-      {gsl_multiroot_fsolver_hybrids, gsl_multiroot_fsolver_hybrid,
-       gsl_multiroot_fsolver_dnewton, gsl_multiroot_fsolver_broyden};
+      {gsl_multiroot_fsolver_hybrid, gsl_multiroot_fsolver_hybrids};
 
    double x_init[@numberOfEWSBEquations@];
    ewsb_initial_guess(x_init);
