--- a/templates/E6SSM/FlexibleSUSY.m.in
+++ b/templates/E6SSM/FlexibleSUSY.m.in
@@ -27,7 +27,7 @@ DefaultParameterPoint = {
 ParametersToSolveTadpoles = { mHd2, mHu2, ms2 };
 
 RenormalizationScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
-RenormalizationScale = Sqrt[Mass[Su[1]]*Mass[Su[6]]];
+RenormalizationScale = Sqrt[M[Su[1]]*M[Su[6]]];
 
 ConditionGUTscale = g1 == g2;
 
