--- a/templates/NMSSM/FlexibleSUSY.m.in
+++ b/templates/NMSSM/FlexibleSUSY.m.in
@@ -1,14 +1,8 @@
 
 (* CNMSSM input parameters *)
 
-MINPAR=     {{1,m0},
-             {2,m12},
-             {3,TanBeta},
-             {4,Azero},
-             {61,LambdaInput},
-             {62,KappaInput},
-             {65,vSInput}
-            };
+InputParameters = { m0, m12, TanBeta, Azero, LambdaInput,
+                    KappaInput, vSInput };
 
 DefaultParameterPoint = {
     {m0, 125},
