--- a/templates/inputPars.hpp.in
+++ b/templates/inputPars.hpp.in
@@ -2,6 +2,8 @@
 #ifndef @ModelName@_INPUT_PARAMETERS_H
 #define @ModelName@_INPUT_PARAMETERS_H
 
+#include "mycomplex.h"
+
 struct @ModelName@_input_parameters {
 @defineInputParameters@
    @ModelName@_input_parameters()
