--- a/templates/model.hpp.in
+++ b/templates/model.hpp.in
@@ -21,6 +21,7 @@
 
 #include "@ModelName@_softPars.hpp"
 #include "@ModelName@_physical.hpp"
+#include "@ModelName@_inputPars.hpp"
 #include "two_scale_model.hpp"
 
 #include <iosfwd>
@@ -30,7 +31,7 @@
 
 class @ModelName@ : public Two_scale_model, public @ModelName@_soft_parameters {
 public:
-   @ModelName@();
+   @ModelName@(const @ModelName@_input_parameters& input_ = @ModelName@_input_parameters());
    virtual ~@ModelName@();
 
    void calculate_DRbar_parameters();
@@ -43,6 +44,7 @@ public:
    unsigned get_ewsb_loop_order() const;
    double get_ewsb_iteration_precision() const;
    const @ModelName@_physical& get_physical() const;
+   const @ModelName@_input_parameters& get_input() const;
    int solve_ewsb();
    int solve_ewsb(unsigned);
    int solve_ewsb_with(const gsl_multiroot_fsolver_type*, const double*);
@@ -74,6 +76,7 @@ private:
    double mass_iteration_precision;
    static const std::size_t numberOfEWSBEquations = @numberOfEWSBEquations@;
    @ModelName@_physical physical;
+   @ModelName@_input_parameters input;
 
    double A0(double) const;
    Complex B0(double, double, double) const;
