--- a/templates/initialGuesser.hpp.in
+++ b/templates/initialGuesser.hpp.in
@@ -4,11 +4,34 @@
 
 #include "@ModelName@_inputPars.hpp"
 #include "two_scale_initial_guesser.hpp"
+#include "error.hpp"
+
+#include <sstream>
 
 class @ModelName@;
 
 class @ModelName@_initial_guesser : public Initial_guesser<Two_scale> {
 public:
+
+   class NonPerturbativeRunningError : public Error {
+   public:
+      NonPerturbativeRunningError(@ModelName@* model_, double scale_)
+         : model(model_)
+         , scale(scale_)
+         {}
+      virtual ~NonPerturbativeRunningError() {}
+      virtual std::string what() const {
+         std::stringstream message;
+         message << "@ModelName@_initial_guesser::NonPerturbativeRunningError:"
+                    " non-perturbative running of model @ModelName@ to scale "
+                 << scale;
+         return message.str();
+      }
+   private:
+      @ModelName@* model;
+      double scale;
+   };
+
    @ModelName@_initial_guesser(@ModelName@*, const @ModelName@_input_parameters&);
    virtual ~@ModelName@_initial_guesser();
    virtual void guess();
