Create a clear() function which deletes all model and output parameters (but not the input parameters).  This function is called in the initial guesser to ensure we start from a clean model class.

--- a/templates/model.cpp.in
+++ b/templates/model.cpp.in
@@ -276,6 +276,14 @@ void @ModelName@::calculate_spectrum()
    calculate_1loop_masses();
 }
 
+void @ModelName@::clear()
+{
+   @ModelName@_soft_parameters::clear();
+
+@clearOutputParameters@
+   physical.clear();
+}
+
 double @ModelName@::getScale() const
 {
    return displayMu();
