--- a/templates/susyPars.hpp.in
+++ b/templates/susyPars.hpp.in
@@ -35,6 +35,7 @@ public:
    virtual void set(const DoubleVector&);
 
    @ModelName@_susy_parameters calcBeta() const;
+   virtual void clear();
 
 @setter@
 @getter@
