Check for tachyons in the scalar and vector boson sector at tree-level

--- a/templates/model.cpp.in
+++ b/templates/model.cpp.in
@@ -19,6 +19,7 @@
 #include "@ModelName@_model.hpp"
 #include "wrappers.hpp"
 #include "logger.hpp"
+#include "error.hpp"
 
 #include <cmath>
 #include <iostream>
